link tag update splash advert added navbar spacing fixed

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,41 +1,51 @@
 @charset "UTF-8";
 /* CSS Document */
 body {
-    font: 400 15px/1.8 'Roboto', sans-serif;
     color: #e3e3e3;
 	background-image: url( "../images/Ripe Malinka.png");
+
+    font: 400 15px/1.8 'Roboto', sans-serif;
   }
   h3, h4 {
     margin: 10px 0 30px 0;
+
     letter-spacing: 10px;
+
+    color: #fff;
+
 	font-family: 'Lobster', cursive;
     font-size: 20px;
-    color: #fff;
   }
   h2 {
-	font-family: 'Roboto', sans-serif;
 	margin: 30px 0 20px 0;
+
 	color: #fff;
-		  
+
+	font-family: 'Roboto', sans-serif;
+
   }
   h1 {
 	margin: 10px 0 30px 0;
+
 	color: #fff;
+
 	font-family: 'Lobster', cursive;
   }
   p {
-	font-family: 'Roboto', sans-serif;
 	color: #fff;
+
+	font-family: 'Roboto', sans-serif;
   }
   .container {
     padding: 80px;
   }
   .person {
-    border: 10px solid transparent;
-    margin-bottom: 25px;
     width: 80%;
     height: 80%;
+    margin-bottom: 25px;
+
     opacity: 0.7;
+    border: 10px solid transparent;
   }
   .person:hover {
     border-color: #f1f1f1;
@@ -53,14 +63,14 @@ body {
     }
   }
   .bg-1 {
-    background: #eba523;
     color: #e3e3e3;
+    background: #eba523;
   }
   .bg-1 h3 {color: #fff;}
   .bg-1 p {font-style: italic;}
   .list-group-item:first-child {
-    border-top-right-radius: 0;
     border-top-left-radius: 0;
+    border-top-right-radius: 0;
   }
   .list-group-item:last-child {
     border-bottom-right-radius: 0;
@@ -69,45 +79,53 @@ body {
   .bg-dark {
     background-color: #343a40 ;
   }
-	 
-	  
+
+
   .bg-dark{
-	background:transparent !important;
-	transition:0.75s ease;
 	height:auto;
 	padding-bottom: 30px;
+
+	transition:0.75s ease;
+
+	background:transparent !important;
   }
 
   .bg-dark.scrolled{
-	background: #474747 !important;
 	opacity: 0.6;
+	background: #474747 !important;
   }
   .thumbnail {
     padding: 0 0 15px 0;
+
     border: none;
     border-radius: 0;
 	background: transparent;
   }
   .thumbnail p {
     margin-top: 15px;
+
     color: #555;
   }
   .btn {
     padding: 10px 20px;
-    background-color: #333;
+
+    transition: .2s;
+
     color: #f1f1f1;
     border-radius: 0;
-    transition: .2s;
+    background-color: #333;
   }
   .btn:hover, .btn:focus {
+    color: #000;
     border: 1px solid #333;
     background-color: #fff;
-    color: #000;
   }
   .modal-header, h4, .close {
-    background-color: #333;
-    color: #fff !important;
     text-align: center;
+
+    color: #fff !important;
+    background-color: #333;
+
     font-size: 30px;
   }
   .modal-header, .modal-body {
@@ -116,34 +134,42 @@ body {
   .nav-tabs li a {
     color: #777;
   }
-  
-	  
+
+
   .navbar {
-    font-family: 'Roboto', sans-serif;
     margin-bottom: 0;
     padding-top: 20px;
-    border: 0;
-    font-size: 2rem !important;
+
     letter-spacing: 4px;
+
     opacity: 1;
+    border: 0;
+
+    font-family: 'Roboto', sans-serif;
+    font-size: 2rem !important;
   }
-  .navbar li a, .navbar { 
-    color: #DCDCDC !important;
+  .navbar li a, .navbar {
 	  opacity: 1;
-	  
+    padding-top: 30px;
+    color: #DCDCDC !important;
+
   }
   .navbar-brand {
-    color: #fff !important;
-	opacity: 1 !important;
     display: inline-block;
+
+    margin-right: 1rem;
     padding-top: 20px;
     padding-bottom: 0.3125rem;
-    margin-right: 1rem;
+
 	text-align: center!important;
+    white-space: nowrap;
+
+	opacity: 1 !important;
+    color: #fff !important;
+
+	font-family: 'Lobster', cursive;
     font-size: 7.5rem;
     line-height: 30px;
-    white-space: nowrap;
-	font-family: 'Lobster', cursive;
   }
   .navbar-nav li a:hover {
     color: #fff !important;
@@ -166,33 +192,34 @@ body {
     background-color: red !important;
   }
   footer {
-    background-color: #2d2d30;
-    color: #f5f5f5;
     padding: 32px;
+
+    color: #f5f5f5;
+    background-color: #2d2d30;
   }
   footer a {
     color: #f5f5f5;
   }
   footer a:hover {
-    color: #777;
     text-decoration: none;
-  }  
+
+    color: #777;
+  }
   .form-control {
     border-radius: 0;
   }
   textarea {
     resize: none;
   }
-	  
+
 @media screen and (max-width: 767px) {
     .navbar-brand {
         font-size: 1.9em;
     }
 }
-	  
-	  @media screen and (min-width: 768px) {
+
+@media screen and (min-width: 768px) {
     .navbar {
         font-size: 2.3em;
     }
 }
-
